# market_scraper

./: LICENSE  main.py  pyproject.toml
scrapers/: dia_scraper.py
