[tool.poetry]
name = "market-scraper"
version = "0.1.0"
description = "scraper para armar carritos de supermercados online"
authors = ["Juan I. Carlis <juancarlis93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




